<resources>
    <string name="app_name">Furniture Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="discover">Discover</string>
    <string name="cart">Cart</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="get_account">Create New Account</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="signup">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="title">Title</string>
    <string name="description">Soft Material Sofa Stool</string>
    <string name="amount_placeholder">$ 40</string>
    <string name="personal_details">Personal Details</string>
    <string name="sign_out">sign out</string>
    <string name="jonh_doe">John Doe</string>
    <string name="palceholder_tel">+254 723 120 234</string>
    <string name="placeholder_email">person@gmail.com</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="track_orders">Track Orders</string>
    <string name="create_item">Create New Item</string>
    <string name="my_saved_items">My Saved Items</string>
    <string name="checkout">checkout</string>
    <string name="empty_cart">Clear Cart</string>
    <string name="view_more">View More</string>
    <string name="read_more">Read More</string>
    <string name="price_format">Ksh. %d</string>
    <string name="total_format">Total cost: %d</string>
    <string name="quantity_format">No of Items: %d</string>
    <string name="complete_checkout">Complete Checkout</string>
    <string name="payment_method">"Select a Payment Method to Continue: "</string>
    <string name="tingg">Tingg</string>
    <string name="mpesa">M-Pesa</string>
    <string name="debit_card">Debit Card</string>


</resources>