<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.ProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <TextView
        android:id="@+id/personal_details"
        style="@style/Widget.FurnitureStore.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/personal_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_image_view"
        app:layout_constraintEnd_toStartOf="@id/edit_profile_icon_button"/>

    <Button
        android:id="@+id/edit_profile_icon_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:icon="@drawable/ic_edit"
        app:iconGravity="end"
        app:layout_constraintTop_toTopOf="@id/personal_details"
        app:layout_constraintBottom_toBottomOf="@id/personal_details"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_profile_details_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal_details">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.FurnitureStore.Avatar"
                android:layout_margin="8dp"
                app:cardCornerRadius="27dp"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/profile_picture_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_avatar" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_profile_name_text_view"
                    style="@style/Widget.FurnitureStore.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    tools:text="@string/jonh_doe" />

                <TextView
                    android:id="@+id/user_profile_phone_text_view"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    tools:text="@string/palceholder_tel" />

                <TextView
                    android:id="@+id/user_profile_email_text_view"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    tools:text="@string/placeholder_email" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>



    <Button
        android:id="@+id/user_profile_orders_button"
        style="@style/Widget.FurnitureStore.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/my_orders"
        app:icon="@drawable/ic_orders"
        app:iconGravity="end"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_details_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/user_profile_cart_button"
        style="@style/Widget.FurnitureStore.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/my_cart"
        app:icon="@drawable/ic_cart"
        app:iconGravity="end"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_orders_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/user_profile_saved_items_button"
            style="@style/Widget.FurnitureStore.SecondaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/my_saved_items"
            app:icon="@drawable/ic_favourite_checked"
            app:iconGravity="end"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_cart_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/user_profile_track_orders_button"
        style="@style/Widget.FurnitureStore.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/track_orders"
        app:icon="@drawable/ic_location"
        app:iconGravity="end"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_saved_items_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/user_profile_create_item_button"
        style="@style/Widget.FurnitureStore.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_item"
        app:icon="@drawable/ic_add"
        app:iconGravity="end"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_track_orders_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/user_profile_logout_button"
        style="@style/Widget.FurnitureStore.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sign_out"
        app:icon="@drawable/ic_logout"
        app:iconGravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>