<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/catalog_item_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/sofa_stool"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="0dp"
            app:icon="@drawable/ic_favourite_unchecked"
            app:iconGravity="end"
            app:iconSize="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



        <TextView
            android:id="@+id/catalog_item_title_text_view"
            style="@style/Widget.FurnitureStore.ItemTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            tools:text="@string/title"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/catalog_item_image_view"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/catalog_item_description_text_view"
            style="@style/Widget.FurnitureStore.ItemDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            tools:text="@string/description"
            app:layout_constraintStart_toEndOf="@id/catalog_item_image_view"
            app:layout_constraintTop_toBottomOf="@id/catalog_item_title_text_view"/>

        <TextView
            android:id="@+id/catalog_item_price_text_view"
            style="@style/Widget.FurnitureStore.ItemAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            tools:text="@string/amount_placeholder"
            app:layout_constraintStart_toEndOf="@id/catalog_item_image_view"
            app:layout_constraintTop_toBottomOf="@id/catalog_item_description_text_view"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="8dp"
            app:fabSize="mini"
            android:contentDescription="@string/add_to_cart"
            app:srcCompat="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</com.google.android.material.card.MaterialCardView>
